add social media to cover

--- a/index.hbs
+++ b/index.hbs
@@ -11,9 +11,13 @@
             {{#if @blog.logo}}<a id="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
             <h1 class="blog-title">{{@blog.title}}</h1>
             <h2 class="blog-description">{{@blog.description}}</h2>
-
-            <a class='btn first'>Take a tour</a>
-            <a class='btn last'>Cut to the chase</a><br>
+            <div class="social">
+                <div>Github</div>
+                <div>Twitter</div>
+                <div>Linkdin</div>
+            </div>
+           {{! <a class='btn first'>Take a tour</a>
+            <a class='btn last'>Cut to the chase</a><br> }}
             <i id='header-arrow' class="icon-angle-down"></i>
         </div>
     </div>
