refactor cover, left float socialz

--- a/index.hbs
+++ b/index.hbs
@@ -12,9 +12,9 @@
             <h1 class="blog-title">{{@blog.title}}</h1>
             <h2 class="blog-description">{{@blog.description}}</h2>
             <div class="social">
-                <div>Github</div>
-                <div>Twitter</div>
-                <div>Linkdin</div>
+                <div><a class="icon-github" href="http://github.com/fremn"></a></div>
+                <div><a class="icon-twitter" href="http://twitter.com/fremn"></a></div>
+                <div><a class="icon-linkdin" href="http://twitter.com/fremn"></a></div>
             </div>
            {{! <a class='btn first'>Take a tour</a>
             <a class='btn last'>Cut to the chase</a><br> }}
