--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -449,6 +449,14 @@ li {
     background-size: cover;
 }
 
+.social {
+    background-color: rgba(0,0,0 0.5);
+}
+.social div {
+    float: left;
+    border: 1px solid red;
+}
+
 #site-head:after {
 
 }
