--- a/index.hbs
+++ b/index.hbs
@@ -12,13 +12,13 @@
             <h1 class="blog-title">{{@blog.title}}</h1>
             <h2 class="blog-description">{{@blog.description}}</h2>
             <div class="social">
-                <div><a class="icon-github" href="http://github.com/fremn"></a></div>
-                <div><a class="icon-twitter" href="http://twitter.com/fremn"></a></div>
-                <div><a class="icon-linkdin" href="http://twitter.com/fremn"></a></div>
+                <a class="icon-github icon-4x" href="http://github.com/fremn"></a>
+                <a class="icon-twitter icon-4x" href="http://twitter.com/fremn"></a>
+                <a class="icon-linkdin icon-4x" href="http://twitter.com/fremn"></a>
             </div>
-           {{! <a class='btn first'>Take a tour</a>
-            <a class='btn last'>Cut to the chase</a><br> }}
+            <div>
             <i id='header-arrow' class="icon-angle-down"></i>
+            </div>
         </div>
     </div>
 
