--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -444,13 +444,22 @@ li {
     height: 100%;
     margin-bottom: 0rem;
     text-align: center;
-    color: #fff;
-    background: rgb(0, 153, 204) no-repeat center center;
+    color: rgba(245, 245, 245, 0.9);;
+    background: rgba(0, 0, 0, 0.35) no-repeat center center;
     background-size: cover;
 }
 
 .social {
-    margin: 3em 0;
+    margin: 3em;
+}
+
+.social a {
+    margin: .5em;
+}
+
+.social a:hover {
+   color: rgba(250, 250, 250, 0.99);;
+
 }
 
 #site-head:after {
@@ -484,7 +493,7 @@ li {
 }
 
 .blog-description {
-    margin: 0;
+    margin: 1.8em;
     font-size: 1.8rem;
     line-height: 1.5em;
     font-weight: 300;
