--- a/index.hbs
+++ b/index.hbs
@@ -11,10 +11,11 @@
             {{#if @blog.logo}}<a id="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
             <h1 class="blog-title">{{@blog.title}}</h1>
             <h2 class="blog-description">{{@blog.description}}</h2>
+            <h3 class="blog-description">Currently Coding Rails, Sails, and Fails </h3>
             <div class="social">
                 <a class="icon-github icon-3x" href="http://github.com/fremn"></a>
                 <a class="icon-twitter icon-3x" href="http://twitter.com/fremn"></a>
-                <a class="icon-linkdin icon-3x" href="http://twitter.com/fremn"></a>
+                <a class="icon-linkedin-sign icon-3x" href="http://www.linkedin.com/pub/fremen-deruvo/28/926/855"></a>
             </div>
             <div>
             <i id='header-arrow' class="icon-angle-down"></i>
