add responsiveness to video

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -735,6 +735,38 @@ a.fn-item.active {
     font-size: 1.1rem;
 }
 
+/*Responsive Video Via http://blog.jon.sh/responsive-youtube-vimeo-embed-and-html5-video-with-css*/
+
+/* wrap this around your embed codes
+        
+        <div class="js-video [vimeo, widescreen]">
+          [video html goes here]
+        </div>
+*/
+.js-video {
+  height: 0;
+  padding-top: 25px;
+  padding-bottom: 67.5%;
+  margin-bottom: 10px;
+  position: relative;
+  overflow: hidden;
+}
+ 
+.js-video.widescreen {
+  padding-bottom: 57.25%;
+}
+ 
+.js-video.vimeo {
+  padding-top: 0;
+}
+
+.js-video embed, .js-video iframe, .js-video object, .js-video video {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
 
 /* ==========================================================================
    7. Pagination - Tools to let you flick between pages
