remove that blue, change class name on div arround post to avoid inline styles from being applied, messy

--- a/index.hbs
+++ b/index.hbs
@@ -33,8 +33,8 @@
 
     {{! Each post will be output using this markup }}
     {{#foreach posts}}
-    <div class='post-holder'>
-        
+    <div class='post-container'>
+            
             {{#if @first}}
                 <article class="{{post_class}} first">
             {{else}}
