--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -503,7 +503,7 @@ li {
     letter-spacing: 0;
 }
 
-.post-holder {
+.post-container:nth-of-type(2) {
     width:100%;
     height: 100%;
     background: #f2efe8;
@@ -738,7 +738,6 @@ a.fn-item.active {
 /*Responsive Video Via http://blog.jon.sh/responsive-youtube-vimeo-embed-and-html5-video-with-css*/
 
 /* wrap this around your embed codes
-        
         <div class="js-video [vimeo, widescreen]">
           [video html goes here]
         </div>
