--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -91,7 +91,8 @@ body {
     font-family: 'Roboto Slab', serif;
     font-size: 2.0rem;
     line-height: 1.6em;
-    color: #3A4145;
+    color: #000;
+    background: #f2efe8;
 }
 
 ::-moz-selection {
@@ -404,8 +405,6 @@ li {
     padding-top: 7px;
 }
 
-
-
 /* ==========================================================================
    3. Utilities - These things get used a lot
    ========================================================================== */
@@ -506,7 +505,8 @@ li {
 .post-container:nth-of-type(2) {
     width:100%;
     height: 100%;
-    background: #f2efe8;
+    color:#000;
+    background: #eee;
     position: relative;
 }
 
@@ -544,15 +544,16 @@ a.fn-item {
     display: block;
     cursor: pointer;
     opacity: 0.7;
+    color: #682330;
 }
 .white {
     color: white;
 }
 a.fn-item:hover {
-    color: #9fd067;
+    color: #ec6613;
 }
 a.fn-item.active {
-    color: #86c440;
+    color: #4caeb3;
     opacity: 1;
 
 }
