--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -502,7 +502,7 @@ li {
     letter-spacing: 0;
 }
 
-.post-container:nth-of-type(2) {
+.post-container:nth-of-type(odd) {
     width:100%;
     height: 100%;
     color:#000;
