add url to index blog posts header

--- a/index.hbs
+++ b/index.hbs
@@ -47,7 +47,7 @@
         
             <header class="post-header">
                 
-                <h2 class="post-title">{{{title}}}</h2>
+                <a href="{{url}}"> <h2 class="post-title">{{{title}}}</h2></a>
 
             </header>
             <section class="post-content">
