add pagination to index

--- a/index.hbs
+++ b/index.hbs
@@ -54,12 +54,14 @@
                 <p>{{content characters="9999999999999"}}</p>
             </section>
         </article>
-        <div class='post-after'></div>
+        <div class='post-after'>
+             
+        </div>
     </div>
 
     {{/foreach}}
-
+    {{pagination}}
     {{!! After all the posts, we have the previous/next pagination links }}
-    
+   
 
 </main>
