--- a/default.hbs
+++ b/default.hbs
@@ -36,13 +36,13 @@
     {{ghost_head}}
 </head>
 <body class="{{body_class}}">
-
-    {{! Everything else gets inserted here }}
-    {{{body}}}
-
+    
+              {{! Everything else gets inserted here }}
+             {{{body}}}
+ 
     <footer class="site-footer">
         <div class="inner">
-             <section class="poweredby"><a href="http://ghostscroll.grmmph.com/">GhostScroll</a> theme by <a href="http://grmmph.com">Yonatan</a>.<br>
+             <section class="poweredby"><a href="http://ghostscroll.grmmph.com/">GhostScroll</a> theme originially by <a href="http://grmmph.com">Yonatan</a>.<br> Modifications by <a href="github.com/fremn">fremn</a><br>
               Proudly published with <a class="i-ghost" href="http://ghost.org">Ghost</a></section>
         </div>
     </footer>
