--- a/post.hbs
+++ b/post.hbs
@@ -3,12 +3,13 @@
 {{! The comment above "< default" means - insert everything in this file into
     the {body} of the default.hbs template, which contains our header/footer. }}
 
+<div id="wrap"> {{!--used to fix footer to page bottom http://www.cssstickyfooter.com/using-sticky-footer-code.html  --}}
 <main class="content" role="main">
 
     <article class="{{post_class}}">
 
         {{! Each post has the blog logo at the top, with a link back to the home page }}
-        <header class="post-header">
+        {{!-- <header class="post-header">
             <a id="blog-logo" href="{{@blog.url}}">
                 {{#if @blog.logo}}
                     <img src="{{@blog.logo}}" alt="Blog Logo" />
@@ -16,15 +17,16 @@
                     {{@blog.title}}
                 {{/if}}
             </a>
-        </header>
+        </header> --}}
 
         {{! Everything inside the #post tags pulls data from the post }}
         {{#post}}
 
         {{! Everything below outputs content of the the post which has been published }}
+        <h1 class="post-title">{{{title}}}</h1>
         <span class="post-meta"><time datetime="{{date format="YYYY-MM-DD"}}">{{date format='DD MMM YYYY'}}</time> {{#if tags}}on {{tags separator=" | "}}{{/if}}</span>
 
-        <h1 class="post-title">{{{title}}}</h1>
+        
 
         <section class="post-content">
             {{content}}
@@ -62,3 +64,4 @@
     </article>
 
 </main>
+</div>
