--- a/default.hbs
+++ b/default.hbs
@@ -35,6 +35,7 @@
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 </head>
+
 <body class="{{body_class}}">
     
               {{! Everything else gets inserted here }}
@@ -42,7 +43,7 @@
  
     <footer class="site-footer">
         <div class="inner">
-             <section class="poweredby"><a href="http://ghostscroll.grmmph.com/">GhostScroll</a> theme originially by <a href="http://grmmph.com">Yonatan</a>.<br> Modifications by <a href="github.com/fremn">fremn</a><br>
+             <section class="poweredby"><a href="http://ghostscroll.grmmph.com/">GhostScroll</a> theme originially by <a href="http://grmmph.com">Yonatan</a>.<br> Modifications by <a href="https://github.com/fremn/GhostScroll">fremn</a><br>
               Proudly published with <a class="i-ghost" href="http://ghost.org">Ghost</a></section>
         </div>
     </footer>
