--- a/default.hbs
+++ b/default.hbs
@@ -35,31 +35,10 @@
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 </head>
-
 <body class="{{body_class}}">
-    <div class="off-canvas-wrap">   
-         <div class="inner-wrap">
-
-            <a class="left-off-canvas-toggle" >Menu</a> 
-
-            <!-- Off Canvas Menu -->
-            <aside class="left-off-canvas-menu">
-                <!-- whatever you want goes here -->
-                <ul>
-                  <li><a href="#">Item 1</a></li>
-                ...
-                </ul>
-            </aside>
-
-            <!-- main content goes here -->
-
-              {{! Everything else gets inserted here }}
+{{!--     <nav><div><a href="/">home</a></div></nav>
+ --}}              {{! Everything else gets inserted here }}
              {{{body}}}
-
-            <!-- close the off-canvas menu -->
-            <a class="exit-off-canvas"></a>
-        </div>
-    </div>
  
     <footer class="site-footer">
         <div class="inner">
