--- a/index.hbs
+++ b/index.hbs
@@ -29,6 +29,7 @@
 <main class="content" role="main">
 
     <div class='fixed-nav'>
+        {{!-- js inserts list of most recent posts --}}
     </div>
 
     {{! Each post will be output using this markup }}
