--- a/post.hbs
+++ b/post.hbs
@@ -5,11 +5,8 @@
 
 <div id="wrap"> {{!--used to fix footer to page bottom http://www.cssstickyfooter.com/using-sticky-footer-code.html  --}}
 <main class="content" role="main">
-    <div class='fixed-nav visible'>
+    <div class='side-nav visible'>
         <a href="/">fre.mn</a>
-        {{#foreach posts}}
-            <a href="{{url}}">{{post.title}}</a>
-        {{/foreach}}
     </div>
     <article class="{{post_class}}">
 
